--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -1,9 +1,12 @@
 @media (max-width: 820px) {
+  body {
+    min-height: 2000px;
+  }
   #logo-text p {
     font-size: 20px;
   }
   #features-box {
-    height: 700px;
+    min-height: 1000px;
     margin-top: 100px;
   }
 }
